force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SPONSOR_VIEW__x/Forrester_SHIR_CASE_CRDR_SPONSOR_VIEW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CASE_CRDR_SPONSOR_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_CRDR_SPONSOR_VIEW</externalName>
    <label>Sponsor</label>
    <pluralLabel>Sponsors</pluralLabel>
</CustomObject>