force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SPONSOR_VIEW__x/fields/CASE_CRDR_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_CRDR_RECID__c</fullName>
    <description>CASE_CRDR_RECID</description>
    <externalDeveloperName>CASE_CRDR_RECID</externalDeveloperName>
    <label>Case CRDR Recid</label>
    <length>12</length>
    <referenceTo>Forrester_SHIR_CRDR_VIEW__x</referenceTo>
    <relationshipLabel>Sponsors</relationshipLabel>
    <relationshipName>Case_Sponsors</relationshipName>
    <type>ExternalLookup</type>
</CustomField>