force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SPONSOR_VIEW__x/fields/CASE_SPONSOR_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_SPONSOR_RECID__c</fullName>
    <description>CASE_SPONSOR_RECID</description>
    <externalDeveloperName>CASE_SPONSOR_RECID</externalDeveloperName>
    <label>Case Sponsor Recid</label>
    <length>12</length>
    <type>Text</type>
</CustomField>