force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SPONSOR_VIEW__x/fields/CONTRACT_SPONSOR_NUM__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_SPONSOR_NUM__c</fullName>
    <description>CONTRACT_SPONSOR_NUM</description>
    <externalDeveloperName>CONTRACT_SPONSOR_NUM</externalDeveloperName>
    <label>Contract Sponsor Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>