force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SPONSOR_VIEW__x/fields/GRANT_CONTRACT_NUMS__c.field-meta.xml
<CustomField>
    <fullName>GRANT_CONTRACT_NUMS__c</fullName>
    <description>GRANT_CONTRACT_NUMS</description>
    <externalDeveloperName>GRANT_CONTRACT_NUMS</externalDeveloperName>
    <label>Grant Contract Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>