force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SPONSOR_VIEW__x/fields/SPONSOR_TYPE__c.field-meta.xml
<CustomField>
    <fullName>SPONSOR_TYPE__c</fullName>
    <description>SPONSOR_TYPE</description>
    <externalDeveloperName>SPONSOR_TYPE</externalDeveloperName>
    <label>Sponsor Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>